--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 0;
+  border: 1px solid orangered;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -167,6 +167,32 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+@font-face {
+  font-family: 'Lacquer';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Lacquer Regular'), local('Lacquer-Regular'), url(https://fonts.gstatic.com/s/lacquer/v1/EYqzma1QwqpG4_BBN7iKWg.ttf) format('truetype');
+}
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+nav h1 {
+  width: 20%;
+}
+nav .links {
+  display: flex;
+  padding: 2%;
+  width: 50%;
+}
+nav .links a {
+  padding: 0 8%;
+  flex-wrap: wrap;
 }
 .home .content-section {
   margin: 30px 0;
