--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,31 @@
 // Navigation Styles here
+
+@import url('https://fonts.googleapis.com/css?family=Lacquer&display=swap');
+
+@header: 'Lacquer', sans-serif;
+
+nav {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    
+    h1 {
+ 
+        width: 20%;
+    }
+
+    .links {
+        display: flex;
+        padding: 2%;
+        width: 50%;
+
+        a {
+            padding: 0 8%;
+            flex-wrap: wrap;
+        }
+    }
+
+    
+}
