--- a/less/home-page.less
+++ b/less/home-page.less
@@ -57,5 +57,27 @@
       width: 30%;
       margin-bottom: 30px;
     }
+    
   }
 }// home
+
+//welcome
+
+#welcome {
+
+  border-bottom: @border;
+
+  h2 {
+    margin-top: 3%;
+  }
+  p {
+    text-align: justify;
+  }
+  .img-bus {
+    border-top: @border;
+  }
+}
+
+.btn {
+  .btnSignUp(center, center);
+}
