--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,3 +17,10 @@
     border-radius: 15px;
     border: 1px solid gray;
 }
+
+.links () {
+    text-decoration: none;
+    color: black;
+}
+
+@phone:~"(max-width: 500px)";
